tests/negative/operator_errors/invalid_operand_type.nano
# Expected Error: Invalid operand type for arithmetic operation

fn main() -> int {
    let x: int = 5
    let y: string = "hello"
    let result: int = (+ x y)  # Error: cannot add int and string
    return result
}

shadow main {
    assert (== (main) 0)
}
